PRODUCT page development

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sabe aquele sabor, que de tão bom você nem consegue definir? Não consegue nomear, só sentir? A Petit Glace é assim :)">
-    <title>Petit Glace - A maior franquia de sorvetes do Brasil</title>
+    <title>Petit Glace - Início</title>
+    <link rel="shortcut icon" href="./assets/img/logo/petit-glace-logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
 </head>
 
 <body>
@@ -28,19 +29,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarPrimary">
                     <ul class="navbar-nav mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a href="#" class="nav-link fw-bold">INÍCIO</a>
+                            <a href="./index.html" class="nav-link fw-bold">INÍCIO</a>
                         </li>
                         <li class="nav-item">
                             <span class="nav-link d-none d-lg-block pipe-separation">|</span>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link fw-bold">SORVETES</a>
+                            <a href="./pages/products.html" class="nav-link fw-bold">SORVETES</a>
                         </li>
                         <li class="nav-item">
                             <span class="nav-link d-none d-lg-block pipe-separation">|</span>
                         </li>
                         <li class="nav-item">   
-                            <a href="#" class="nav-link fw-bold">EMPRESA</a>
+                            <a href="#company" class="nav-link fw-bold">EMPRESA</a>
                         </li>
                         <li class="nav-item">
                             <span class="nav-link d-none d-lg-block pipe-separation">|</span>
@@ -132,6 +133,8 @@
                     </div>
                 </article>
             </div> 
+
+            <div id="company"></div>
         </section>
 
         <section class="container-fluid bg-light pt-5">
@@ -170,7 +173,7 @@
             </div>
         </section>
 
-        <svg class="shape-white" x="0px" y="0px" viewBox="0 0 1440 320" style="enable-background:new 0 0 1440 320;" xml:space="preserve">
+        <svg class="shape-white-1" viewBox="0 0 1440 320">
             <path d="M1440,224l-20-10.7c-20-10.3-60-32.3-100-21.3s-80,53-120,80s-80,37-120, 16s-80-75-120-85.3
                 C920,192,880,224,840,208s-80-80-120-80s-80,64-120,64s-80-64-120-69.3c-40-5.7-80,48.3-120,48C320,171,280,117,240,96
                 s-80-11-120,5.3C80,117,40,139,20,149.3L0,160V0h20c20,0,60,0,100,0s80,0,120,0s80,0,120,0s80,0,120,0s80,0,120,0s80,0,120,0
@@ -188,7 +191,7 @@
                 </article>
 
                 <article class="col-12 d-flex flex-wrap align-items-center justify-content-around">
-                    <p class="fs-5 my-3">
+                    <p class="fs-5 text-start my-3">
                         Tudo começou quando Rubens, presenteou <br>
                         seu filho filho com uma pequena sorveteria <br>
                         no interior de São Paulo. A primeira loja era <br>
@@ -202,7 +205,7 @@
                 <article class="col-12 d-flex flex-wrap align-items-center justify-content-around">
                     <img src="./assets/img/milk-shake-design-image.png" alt="Milk shake" width="300" class="img-fluid order-1 order-lg-0">
 
-                    <p class="fs-5 my-3 orderm-0 order-lg-1">
+                    <p class="fs-5 text-end my-3 orderm-0 order-lg-1">
                         Há mais de 12 anos no mercado, a Petit Glace <br> 
                         se tornou a primeira rede de <br> 
                         franquias no formato lojas de fábrica. <br> 
@@ -216,6 +219,76 @@
             </div>
         </section>
     </main>
+
+    <svg class="shape-white-2" viewBox="0 0 1440 320">
+        <path d="M0,160L60,144C120,128,240,96,360,90.7C480,85,600,107,720,133.3C840,160,960,192,1080,181.3C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"/>
+    </svg>
+
+    <footer class="container-fluid bg-light pt-5">
+        <div class="row text-center">
+            <article class="col-lg-3 col-12">
+                <ul class="list-unstyled">
+                    <li class="m-1">
+                        <img src="./assets/img/logo/petit-glace-logo.svg" alt="Logo Petit Glace" width="140">
+                    </li>
+                    <li class="m-1">
+                        &copy; 2003 - 2021
+                    </li>
+                </ul>
+            </article>
+
+            <article class="col-lg-3 col-12">
+                <ul class="list-unstyled">
+                    <li class="fw-bold text-secondary m-1">
+                        Redes sociais
+                    </li>
+
+                    <li class="m-1">
+                        <a href="https://pt-br.facebook.com/" target="_blank" class="text-decoration-none text-black-200">Facebook</a>
+                    </li>
+                    <li class="m-1">
+                        <a href="https://www.instagram.com/" target="_blank" class="text-decoration-none text-black-200">Instagram</a>
+                    </li>
+                </ul>
+            </article>
+
+            <article class="col-lg-3 col-12">
+                <ul class="list-unstyled">
+                    <li class="fw-bold text-secondary m-1">
+                        Sobre
+                    </li>
+                    <li class="m-1">
+                        <a href="#company" class="text-decoration-none text-black-200">Empresa</a>
+                    </li>
+                </ul>
+            </article>
+
+            <article class="col-lg-3 col-12">
+                <ul class="list-unstyled">
+                    <li class="fw-bold text-secondary m1">
+                        Contato
+                    </li>
+                    <li class="text-black-200 m-1">
+                        petit@cream.com.br
+                    </li>
+                    <li class="text-black-200 m-1">
+                        (16) 31959-7093
+                    </li>
+                </ul>
+            </article>
+        </div>
+
+        <div class="row bg-secondary mt-5 py-3">
+            <article class="col-12">
+                <span class="text-white d-flex align-items-center justify-content-center">
+                    Desenvolvido com muito &ThinSpace;
+                    <img src="./assets/img/icons/heart-icon.svg" alt="amor" width="20"> 
+                    &ThinSpace; e &ThinSpace;
+                    <img src="./assets/img/icons/coffee-icon.svg" alt="café" width="20">
+                </span>
+            </article>
+        </div>
+    </footer>
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
