Final development of the FAQ page

--- a/pages/commonQuestions.html
+++ b/pages/commonQuestions.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#EA516D">
     <title>Petit Glace - FAQ</title>
     <link rel="shortcut icon" href="../static/logo/petit-glace-logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/base.css">
     <link rel="stylesheet" href="../assets/css/commonQuestions.css">
 </head>
@@ -59,15 +59,175 @@
     <section class="container my-5">
         <div class="row text-center">
             <article class="col-12">
-                <h3>O que deseja saber?</h3>
+                <h1>O que deseja saber?</h1>
 
                 <hr class="mx-auto mt-4 mb-2 opacity-100">
 
                 <p class="fs-4 mb-3 description">Essas perguntas responderão <br> todas suas dúvidas!</p>
             </article>
         </div>
-    </section>
 
+        <div class="row mt-3">
+            <div id="accordionFlush" class="accordion accordion-flush mx-auto shadow">
+                <article class="accordion-item">
+                    <span id="flush-headingOne" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            O que significa <span class="primary-color mg-left">Petit Glace</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                Em francês, Petit Glace significa <span class="primary-color">sorvete pequeno</span>!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingTwo" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Quem é o <span class="primary-color mg-left">fundador</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                O fundador da Petit Glace é o <span class="primary-color">Rubens Teixeira</span>!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingThree" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            Possuem sorvetes de <span class="primary-color mg-left">origem vegana</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                Sim, atualmente possuímos <span class="primary-color">5 tipos de sorvete</span> de origem vegana!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingFour" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                            A entrega é em todo <span class="primary-color mg-left">território nacional</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                Sim, possuímos um <span class="primary-color">método inovador</span> de <span class="primary-color">entrega</span>!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingFive" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                            Como posso fazer o meu <span class="primary-color mg-left">pedido</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                No momento, os pedidos podem ser feitos via <span class="primary-color">e-mail</span>, <span class="primary-color">telefone</span> ou <span class="primary-color">loja física</span>!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingSix" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                            Aceitam todos <span class="primary-color mg-left">cartões</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                Sim, aceitamos todos os <span class="primary-color">cartões</span> e <span class="primary-color">vales-refeição</span>!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingSeven" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+                            Aniversariantes recebem <span class="primary-color mg-left">desconto</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                Sim, um desconto de <span class="primary-color">30%</span>. E como cortesia, oferecemos um <span class="primary-color">bolo de sorvete</span>. Para isso, basta <span class="primary-color">apresentar</span> um <span class="primary-color">documento</span> comprovando seu aniversário!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingEight" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
+                            Possuem serviço de <span class="primary-color mg-left">delivery</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                Sim, basta fazer o pedido via <span class="primary-color">telefone</span>!
+                            </span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="accordion-item">
+                    <span id="flush-headingNine" class="accordion-header">
+                        <button class="h2 accordion-button collapsed p-4" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseNine" aria-expanded="false" aria-controls="flush-collapseNine">
+                            Os produtos são <span class="primary-color mg-left">certificados</span>?
+                        </button>
+                    </span>
+
+                    <div id="flush-collapseNine" class="accordion-collapse collapse" aria-labelledby="flush-headingNine" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">
+                            <span>
+                                Sim, nossos produtos <span class="primary-color">possuem</span> certificações, ou seja, um <span class="primary-color">local</span> de preparo <span class="primary-color">higienizado</span> e de <span class="primary-color">qualidade</span>. Abaixo segue algumas <span class="primary-color">certificações</span>!
+
+                                <div class="link-certificate mt-2">
+                                    <a href="https://pt.wikipedia.org/wiki/ISO_9000" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+                                        ISO 9001:2000
+                                    </a>
+
+                                    e
+
+                                    <a href="https://en.wikipedia.org/wiki/ISO_22000" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+                                        ISO 22000:2018
+                                    </a>
+                                </div>
+                            </span>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+    
     <svg class="shape-white-2" viewBox="0 0 1440 320">
         <path d="M0,160L60,144C120,128,240,96,360,90.7C480,85,600,107,720,133.3C840,160,960,192,1080,181.3C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"/>
     </svg>
@@ -138,7 +298,7 @@
         </div>
     </footer>
 
-    <script src="../assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
