--- a/pages/common-questions.html
+++ b/pages/common-questions.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="creator" content="Ryan Matheus de Oliveira">
     <meta name="theme-color" content="#EA516D">
+
     <title>Petit Glace - FAQ</title>
-    <link rel="shortcut icon" href="../static/logo/petit-glace-logo.svg" type="image/x-icon">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../static/logo/petit-glace-logo.svg" type="image/svg">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/base.css">
-    <link rel="stylesheet" href="../assets/css/commonQuestions.css">
+    <link rel="stylesheet" href="../assets/css/common-questions.css">
+
+    <!-- Scripts -->
+    <script src="../vendor/bootstrap/bootstrap.bundle.min.js" defer></script>
 </head>
 
 <body>
@@ -48,7 +57,7 @@
                             <span class="nav-link d-none d-lg-block pipe-separation">|</span>
                         </li>
                         <li class="nav-item">   
-                            <a href="./commonQuestions.html" class="nav-link fw-bold">FAQ</a>
+                            <a href="./common-questions.html" class="nav-link fw-bold">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -297,8 +306,6 @@
             </article>
         </div>
     </footer>
-
-    <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
